--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,25 +70,31 @@ jobs:
       - name: render book
         run: |
           setwd('tables-book')
-          rmarkdown::render_site(encoding = 'UTF-8')
+          rmarkdown::render_site(encoding = 'UTF-8', output_format=c("html_doucument", "pdf_document"))
         shell: Rscript {0}
-
-      - name: Deploy main 🚀
-        if: env.BRANCH_NAME == 'main'
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: tables-book/_book/
-          TARGET_FOLDER: '.' # The folder the action should deploy.
-          CLEAN: true
+          name: book
+          path: tables-book/_book/
+          
+      # - name: Deploy main 🚀
+      #   if: env.BRANCH_NAME == 'main'
+      #   uses: JamesIves/github-pages-deploy-action@releases/v3
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     BRANCH: gh-pages # The branch the action should deploy to.
+      #     FOLDER: tables-book/_book/
+      #     TARGET_FOLDER: '.' # The folder the action should deploy.
+      #     CLEAN: true
 
-      - name: Deploy any but not main
-        if: env.BRANCH_NAME != 'main'
-        uses: JamesIves/github-pages-deploy-action@releases/v3
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: tables-book/_book/
-          TARGET_FOLDER: ${{ env.BRANCH_NAME }} # The folder the action should deploy.
-          CLEAN: false
+      # - name: Deploy any but not main
+      #   if: env.BRANCH_NAME != 'main'
+      #   uses: JamesIves/github-pages-deploy-action@releases/v3
+      #   with:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     BRANCH: gh-pages # The branch the action should deploy to.
+      #     FOLDER: tables-book/_book/
+      #     TARGET_FOLDER: ${{ env.BRANCH_NAME }} # The folder the action should deploy.
+      #     CLEAN: false
